Add missing permission for webview tests and remove OS specific #ifdef in getUserMedia code.

The reason for the failures on android turned out to be because of the test configuration and not the getUserMedia code. The failure we were hitting was in AndroidAudioManager.java where it turned out that the MODIFY_AUDIO_SETTINGS was missing from the manifest.

See: https://cs.chromium.org/chromium/src/media/base/android/java/src/org/chromium/media/AudioManagerAndroid.java?rcl=0&l=385

BUG=679302

Review-Url: https://codereview.chromium.org/2648173005
Cr-Commit-Position: refs/heads/master@{#446150}

Former-commit-id: 9047236448cceb86f314cd9ea9d0056f51bccb63